--- a/intermission.html
+++ b/intermission.html
@@ -114,14 +114,15 @@
   // Paste your Firebase config here (Realtime Database).
   // If left empty, the game runs in LOCAL DEMO mode (no shared joining).
   const firebaseConfig = {
-    // apiKey: "…",
-    // authDomain: "…",
-    // databaseURL: "https://YOUR-PROJECT.firebaseio.com",
-    // projectId: "…",
-    // storageBucket: "…",
-    // messagingSenderId: "…",
-    // appId: "…"
-  };
+  apiKey: "AIzaSyDDV3oaa0PCRSbVP3-jplsFUHiLm6Zil1M",
+  authDomain: "ifwl-stream-game.firebaseapp.com",
+  databaseURL: "https://ifwl-stream-game-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "ifwl-stream-game",
+  storageBucket: "ifwl-stream-game.firebasestorage.app",
+  messagingSenderId: "132989681275",
+  appId: "1:132989681275:web:307b06df334c1d0685ecde",
+  measurementId: "G-EV4Z45T295"
+};
 
   // Room key (so you can run multiple “rooms” if you want later)
   const ROOM = "main";
