--- a/intermission.html
+++ b/intermission.html
@@ -49,12 +49,14 @@
   <div class="grid">
     <div class="card">
       <canvas id="game" width="960" height="540"></canvas>
+
       <div class="controls" id="touchControls">
         <button id="btnLeft">⬅️ Left</button>
         <button id="btnRight">Right ➡️</button>
       </div>
+
       <div class="hint" style="margin-top:10px">
-        <span style="color:#93ffd2">Player:</span> Enter your name → join a car (max 7). Steer on mobile with buttons.<br/>
+        <span style="color:#93ffd2">Player:</span> Enter name → join a car (max 7). Steer on mobile with buttons.<br/>
         <span style="color:#ffd38a">Host:</span> Open <span class="mono">?host=1</span> on your stream PC to start races.
       </div>
     </div>
@@ -87,7 +89,7 @@
       <div class="leaderboard" id="lbList"></div>
 
       <div class="hr"></div>
-      <div class="small">Tip: if “Phase: undefined”, it means no host is running. Open the same page with <span class="mono">?host=1</span>.</div>
+      <div class="small">Tip: if nothing moves, make sure a host tab is open: <span class="mono">?host=1</span></div>
     </div>
   </div>
 </div>
@@ -106,7 +108,7 @@
   const LEADERBOARD_SECONDS = 30;
   const ROOM = "main";
 
-  // 🔥 PASTE YOUR firebaseConfig HERE (your existing one)
+  // ✅ Your Firebase config (already inserted)
   const firebaseConfig = {
     apiKey: "AIzaSyDDV3oaa0PCRSbVP3-jplsFUHiLm6Zil1M",
     authDomain: "ifwl-stream-game.firebaseapp.com",
@@ -126,25 +128,31 @@
 
   const canvas = document.getElementById("game");
   const ctx = canvas.getContext("2d");
-  const phaseText = document.getElementById("phaseText");
-  const timeText = document.getElementById("timeText");
-  const modePill = document.getElementById("modePill");
 
-  const nameInput = document.getElementById("nameInput");
-  const joinBtn = document.getElementById("joinBtn");
-  const leaveBtn = document.getElementById("leaveBtn");
-  const statusLine = document.getElementById("statusLine");
-  const carsList = document.getElementById("carsList");
-  const lbList = document.getElementById("lbList");
+  const phaseText = document.getElementById("phaseText");
+  const timeText  = document.getElementById("timeText");
+  const modePill  = document.getElementById("modePill");
+
+  const nameInput   = document.getElementById("nameInput");
+  const joinBtn     = document.getElementById("joinBtn");
+  const leaveBtn    = document.getElementById("leaveBtn");
+  const statusLine  = document.getElementById("statusLine");
+  const carsList    = document.getElementById("carsList");
+  const lbList      = document.getElementById("lbList");
+
   const touchControls = document.getElementById("touchControls");
-  const btnLeft = document.getElementById("btnLeft");
+  const btnLeft  = document.getElementById("btnLeft");
   const btnRight = document.getElementById("btnRight");
+
   const sideTitle = document.getElementById("sideTitle");
-  const sideHint = document.getElementById("sideHint");
+  const sideHint  = document.getElementById("sideHint");
 
   modePill.innerHTML = `Mode: <strong>${isHost ? "HOST" : "PLAYER"}</strong>`;
 
   function setStatus(msg){ statusLine.textContent = "Status: " + msg; }
+  function escapeHtml(s){
+    return (s||"").replace(/[&<>"']/g, c => ({ "&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#39;" }[c]));
+  }
 
   // ----------------------------
   // FIREBASE INIT
@@ -163,12 +171,12 @@
   async function fbSet(path, value){
     await roomRef(path).set(value);
   }
-  async function fbOn(path, cb){
+  function fbOn(path, cb){
     roomRef(path).on("value", s => cb(s.val()));
   }
 
   // ----------------------------
-  // GAME STATE
+  // STATE
   // ----------------------------
   const playerId = (crypto?.randomUUID?.() || (Date.now()+"-"+Math.random())).slice(0,24);
   let mySlot = null;
@@ -182,10 +190,9 @@
     }
     return {
       phase:"lobby",
-      phaseEndsAt: Date.now() + 5000,
+      phaseEndsAt: Date.now() + 4000,
       cars,
       obstacles: [],
-      // track params
       t: 0,
       lastTick: Date.now(),
       scroll: 0,
@@ -242,21 +249,20 @@
   // ----------------------------
   // TRACK + PHYSICS (scrolling top-down)
   // ----------------------------
-  // Track is defined by centerline x as a function of worldY.
-  // We render the segment from scroll..scroll+screenHeight.
   function centerX(worldY, t){
-    // mix a few sine waves so it looks like a race track
+    // A few sine waves blended = believable bends
     return 480
       + Math.sin((worldY*0.0022) + t*0.9) * 160
       + Math.sin((worldY*0.0011) + t*0.4) * 80;
   }
 
-  const ROAD_HALF = 190;      // half width of asphalt
-  const KERB = 18;            // kerb thickness
+  const ROAD_HALF = 190;
+  const KERB = 18;
+
   const CAR_W = 28;
   const CAR_H = 46;
-  const CAR_Y = 420;          // on-screen y for cars (fixed)
-  const SCROLL_SPEED = 270;   // track movement speed (px/sec)
+  const CAR_Y = 420;
+  const SCROLL_SPEED = 270;
 
   function hostTick(room){
     const now = Date.now();
@@ -266,14 +272,13 @@
     room.t += dt;
     room.scroll += SCROLL_SPEED * dt;
 
-    // spawn obstacles ahead (world space)
-    // choose a worldY ahead of view, and a lateral offset from center
+    // spawn obstacles ahead
     if (Math.random() < 0.11){
-      const spawnY = room.scroll - 120; // slightly above top
-      const cx = centerX(spawnY, room.t);
+      const spawnWY = room.scroll - 120; // above top
+      const cx = centerX(spawnWY, room.t);
       const offset = (Math.random()*2 - 1) * (ROAD_HALF - 40);
       room.obstacles.push({
-        wy: spawnY,
+        wy: spawnWY,
         wx: cx + offset,
         r: 16 + Math.random()*10,
         kind: Math.random() < 0.6 ? "block" : "cone"
@@ -290,36 +295,30 @@
 
       c.score += dt;
 
-      // each car gets a starting lane offset
-      const laneOffset = (i - (MAX_CARS-1)/2) * 34; // spread a bit
-      // steering input shifts car left/right
-      const steer = (c.input || 0) * 140; // px
+      const laneOffset = (i - (MAX_CARS-1)/2) * 34;
+      const steer = (c.input || 0) * 140;
 
-      // Car's world position:
-      // worldY at the car’s on-screen Y
       const carWY = room.scroll + CAR_Y;
       const cx = centerX(carWY, room.t);
 
       const carX = cx + laneOffset + steer;
       const carY = CAR_Y;
 
-      // off track = OUT
-      const dxFromCenter = Math.abs(carX - cx);
-      if (dxFromCenter > (ROAD_HALF - 14)){
+      // off track = out
+      if (Math.abs(carX - cx) > (ROAD_HALF - 14)){
         c.alive = false;
         c.eliminatedAt = now;
         continue;
       }
 
-      // collision vs obstacles (convert obstacle world to screen)
+      // collision vs obstacles
       for (const ob of room.obstacles){
-        const sy = ob.wy - room.scroll; // screen y
-        const sx = ob.wx;               // already in screen space x (because centerX uses screen coords)
-        // Only check near the car
+        const sy = ob.wy - room.scroll;
         if (sy < carY - 70 || sy > carY + 70) continue;
 
-        const dx = Math.abs(carX - sx);
+        const dx = Math.abs(carX - ob.wx);
         const dy = Math.abs(carY - sy);
+
         if (dx < (CAR_W/2 + ob.r*0.7) && dy < (CAR_H/2 + ob.r*0.7)){
           c.alive = false;
           c.eliminatedAt = now;
@@ -346,15 +345,14 @@
   function draw(room){
     ctx.clearRect(0,0,canvas.width,canvas.height);
 
-    // background grass
+    // grass
     ctx.fillStyle = "#06110b";
     ctx.fillRect(0,0,canvas.width,canvas.height);
 
-    // draw track as many horizontal strips (cheap + effective)
     const t = room.t || 0;
     const scroll = room.scroll || 0;
 
-    // road shading stripes
+    // track strips
     for (let y=0; y<canvas.height; y+=6){
       const wy = scroll + y;
       const cx = centerX(wy, t);
@@ -370,7 +368,7 @@
       ctx.fillRect(left - KERB, y, KERB, 6);
       ctx.fillRect(right, y, KERB, 6);
 
-      // edge dark line
+      // edge line
       ctx.fillStyle = "#22364a";
       ctx.fillRect(left-1, y, 1, 6);
       ctx.fillRect(right, y, 1, 6);
@@ -383,7 +381,6 @@
         if (sy < -60 || sy > canvas.height+60) continue;
 
         if (ob.kind === "cone"){
-          // triangle cone
           ctx.fillStyle = "#ff9b4d";
           ctx.beginPath();
           ctx.moveTo(ob.wx, sy - ob.r);
@@ -395,7 +392,6 @@
           ctx.lineWidth = 2;
           ctx.stroke();
         } else {
-          // block
           ctx.fillStyle = "#2a3c52";
           ctx.fillRect(ob.wx - ob.r, sy - ob.r, ob.r*2, ob.r*2);
           ctx.strokeStyle = "#476587";
@@ -408,20 +404,18 @@
     // cars
     for (let i=0;i<MAX_CARS;i++){
       const c = room.cars?.[i];
-      const hasName = c?.name && c.name.trim();
-      if (!hasName) continue;
+      if (!c?.name) continue;
 
       const laneOffset = (i - (MAX_CARS-1)/2) * 34;
       const steer = (c.input || 0) * 140;
 
       const carWY = scroll + CAR_Y;
       const cx = centerX(carWY, t);
+
       const x = cx + laneOffset + steer;
       const y = CAR_Y;
-
       const alive = !!c.alive;
 
-      // car body
       ctx.save();
       ctx.globalAlpha = alive ? 1 : 0.3;
 
@@ -437,11 +431,9 @@
       ctx.fillStyle = "#071019";
       ctx.fillRect(x - CAR_W/2 + 5, y - CAR_H/2 + 10, CAR_W-10, 16);
 
-      // front wing
+      // wings
       ctx.fillStyle = "#0e1620";
       ctx.fillRect(x - CAR_W/2 - 6, y - CAR_H/2 - 6, CAR_W + 12, 8);
-
-      // rear wing
       ctx.fillRect(x - CAR_W/2 - 6, y + CAR_H/2 - 2, CAR_W + 12, 8);
 
       // number
@@ -464,7 +456,7 @@
       }
     }
 
-    // HUD top strip
+    // HUD
     ctx.fillStyle = "rgba(0,0,0,0.35)";
     ctx.fillRect(0,0,canvas.width,30);
     ctx.fillStyle = "#e7eef8";
@@ -474,6 +466,7 @@
   }
 
   function renderSide(room){
+    // cars list
     carsList.innerHTML = "";
     for (let i=0;i<MAX_CARS;i++){
       const c = room.cars[i];
@@ -487,6 +480,7 @@
       carsList.appendChild(el);
     }
 
+    // leaderboard list
     lbList.innerHTML = "";
     const entries = computeLeaderboard(room);
     entries.forEach((e, idx) => {
@@ -499,10 +493,12 @@
       lbList.appendChild(el);
     });
 
+    // header stats
     phaseText.textContent = room.phase || "—";
     const msLeft = Math.max(0, (room.phaseEndsAt || Date.now()) - Date.now());
     timeText.textContent = (msLeft/1000).toFixed(1) + "s";
 
+    // disable/enable UI based on host/player
     if (isHost){
       sideTitle.textContent = "Host Panel";
       sideHint.innerHTML = `You are the host. Keep this open on stream PC.<br/>Share: <span class="mono">${location.origin + location.pathname}</span>`;
@@ -515,13 +511,9 @@
       sideHint.textContent = "Type your name and press Enter. First come first served.";
       nameInput.disabled = false;
       joinBtn.disabled = false;
-      touchControls.style.display = mySlot !== null ? "flex" : "none";
       leaveBtn.disabled = (mySlot === null);
+      touchControls.style.display = (mySlot !== null) ? "flex" : "none";
     }
-  }
-
-  function escapeHtml(s){
-    return (s||"").replace(/[&<>"']/g, c => ({ "&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#39;" }[c]));
   }
 
   // ----------------------------
@@ -549,7 +541,7 @@
       cars[free] = cars[free] || { name:"", alive:false, score:0, input:0, eliminatedAt:null };
       cars[free].name = name;
       cars[free].input = 0;
-      cars[free].alive = false;
+      cars[free].alive = false; // host sets alive at race start
       cars[free].score = 0;
       cars[free].eliminatedAt = null;
       cars[free]._pid = playerId;
@@ -584,6 +576,7 @@
     const slotRef = roomRef(`cars/${slot}`);
     const snap = await slotRef.get();
     const val = snap.val();
+
     if (val && val._pid === playerId){
       await slotRef.set({ name:"", alive:false, score:0, input:0, eliminatedAt:null });
       setStatus("Left the car.");
@@ -598,35 +591,26 @@
   }
 
   // ----------------------------
-  // HOST LOOP + SUBSCRIBE
+  // HOST + SUBSCRIBE
   // ----------------------------
-  let currentRoom = null;
-
   async function hostInit(){
     setStatus("HOST running.");
     const existing = await fbGet("");
     if (!existing || !existing.cars){
-      await fbSet("", makeDefaultRoom());
-    }
-    const room = await fbGet("");
-    if (!room.phase) {
       const fresh = makeDefaultRoom();
       resetForRace(fresh);
       await fbSet("", fresh);
       return;
     }
-    if (room.phase !== "race"){
-      resetForRace(room);
-      await fbSet("", room);
+    // If exists, ensure we're in race
+    if (!existing.phase || existing.phase !== "race"){
+      resetForRace(existing);
+      await fbSet("", existing);
     }
   }
 
-  async function fbGet(path){
-    const snap = await roomRef(path).get();
-    return snap.val();
-  }
-
-  function firebaseLoop(){
+  function startLoops(){
+    // Host authoritative loop
     if (isHost){
       const tick = async () => {
         try{
@@ -653,18 +637,18 @@
 
           await fbSet("", room);
         } catch(e){
-          console.error(e);
+          console.error("HOST TICK ERROR:", e);
         }
-        setTimeout(tick, 50);
+        setTimeout(tick, 50); // ~20Hz
       };
       tick();
     }
 
+    // Everyone subscribes for rendering
     fbOn("", room => {
       if (!room) return;
-      currentRoom = room;
-      draw(currentRoom);
-      renderSide(currentRoom);
+      draw(room);
+      renderSide(room);
     });
   }
 
@@ -710,8 +694,8 @@
   // ----------------------------
   (async () => {
     if (isHost) await hostInit();
-    firebaseLoop();
-    setStatus(isHost ? "HOST ready. Race should start immediately." : "Joined as PLAYER. If race doesn’t start, open a HOST tab with ?host=1.");
+    startLoops();
+    setStatus(isHost ? "HOST ready. Track should move now." : "PLAYER ready. If nothing moves, open a host tab with ?host=1.");
   })();
 })();
 </script>
