--- a/intermission.html
+++ b/intermission.html
@@ -178,7 +178,7 @@
   // ----------------------------
   // STATE
   // ----------------------------
-  const playerId = (crypto?.randomUUID?.() || (Date.now()+"-"+Math.random())).slice(0,24);
+  const playerId = (Date.now().toString(36) + Math.random().toString(36).slice(2)).slice(0,24);
   let mySlot = null;
 
   const carColors = ["#ff4d6d","#4dd4ff","#93ffd2","#ffd38a","#b39cff","#a7ff4d","#ff9bf5"];
